--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             <div class="container">
                 <div class="team__box">
                     <div class="team__box-item">
-                        <div class="team__box-img"> <img src="/images/team/1.jpg"> </div>
+                        <div class="team__box-img"> <img src="images/team/1.jpg"> </div>
                         <div class="team__box-info">
                             <div class="team__box-name"> Shaky Lake </div>
                             <div class="team__box-job"> Founder </div>
