--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
                         </div>
                         <div class="header__icons">
                             <a href="#" class="header__icon-item">
-                                <img class="icon__social" src="/images/icon/tw.svg" alt="twitter">
+                                <img class="icon__social" src="images/icon/tw.svg" alt="twitter">
                             </a>
                             <a href="#" class="header__icon-item">
-                                <img class="icon__social" src="/images/icon/ds.svg" alt="discord">
+                                <img class="icon__social" src="images/icon/ds.svg" alt="discord">
                             </a>
                             <a href="#" class="header__icon-item">
-                                <img class="icon__social" src="/images/icon/yt.svg" alt="youtube">
+                                <img class="icon__social" src="images/icon/yt.svg" alt="youtube">
                             </a>
                             <a href="#" class="header__icon-item">
-                                <img class="icon__social" src="/images/icon/tg.svg" alt="telegram">
+                                <img class="icon__social" src="images/icon/tg.svg" alt="telegram">
                             </a>
                         </div>
                     </div>
@@ -98,15 +98,15 @@
         <div class="container2">
             <div class="artists__box">
                 <div class="artists__box-item">
-                    <div class="artists__box-img"> <img src="/images/artists/1.jpg"> </div>
+                    <div class="artists__box-img"> <img src="images/artists/1.jpg"> </div>
                     <div class="artists__box-name"> Mark Popson </div>
                 </div>
                 <div class="artists__box-item">
-                    <div class="artists__box-img"> <img src="/images/artists/2.jpg"> </div>
+                    <div class="artists__box-img"> <img src="images/artists/2.jpg"> </div>
                     <div class="artists__box-name"> Pete Bentz </div>
                 </div>
                 <div class="artists__box-item">
-                    <div class="artists__box-img"> <img src="/images/artists/3.jpg"> </div>
+                    <div class="artists__box-img"> <img src="images/artists/3.jpg"> </div>
                     <div class="artists__box-name"> Daniela Youth </div>
                 </div>
                 <div class="artists__box-item">
@@ -114,15 +114,15 @@
                     <div class="artists__box-name"> Roman Gore </div>
                 </div>
                 <div class="artists__box-item">
-                    <div class="artists__box-img"> <img src="/images/artists/5.jpg"> </div>
+                    <div class="artists__box-img"> <img src="images/artists/5.jpg"> </div>
                     <div class="artists__box-name"> Tonya </div>
                 </div>
                 <div class="artists__box-item">
-                    <div class="artists__box-img"> <img src="/images/artists/6.jpg"> </div>
+                    <div class="artists__box-img"> <img src="images/artists/6.jpg"> </div>
                     <div class="artists__box-name"> Ivor </div>
                 </div>
                 <div class="artists__box-item">
-                    <div class="artists__box-img"> <img src="/images/artists/7.jpg"> </div>
+                    <div class="artists__box-img"> <img src="images/artists/7.jpg"> </div>
                     <div class="artists__box-name"> Somae Petit </div>
                 </div>
             </div>
@@ -145,7 +145,7 @@
                     </div>
                     <div id="London" class="tabcontent">
                         <div class="story__accordeon-box">
-                            <div class="story__accordeon-img"> <img src="/images/lifedecor/2guys.jpg"> </div>
+                            <div class="story__accordeon-img"> <img src="images/lifedecor/2guys.jpg"> </div>
                             <div class="story__accordeon-content">
                                 <div class="story__accordeon-head">
                                     META record label was founded by Shaky Lake and Baky Hike in 2020 business
@@ -171,7 +171,7 @@
 
                     <div id="Paris" class="tabcontent">
                         <div class="story__accordeon-box">
-                            <div class="story__accordeon-img"> <img src="/images/lifedecor/2guys.jpg"> </div>
+                            <div class="story__accordeon-img"> <img src="images/lifedecor/2guys.jpg"> </div>
                             <div class="story__accordeon-content">
                                 <div class="story__accordeon-head">
                                     META record label was founded by Shaky Lake and Baky Hike in 2021 business
@@ -197,7 +197,7 @@
 
                     <div id="Tokyo" class="tabcontent">
                         <div class="story__accordeon-box">
-                            <div class="story__accordeon-img"> <img src="/images/lifedecor/2guys.jpg"> </div>
+                            <div class="story__accordeon-img"> <img src="images/lifedecor/2guys.jpg"> </div>
                             <div class="story__accordeon-content">
                                 <div class="story__accordeon-head">
                                     META record label was founded by Shaky Lake and Baky Hike in 2022 business
@@ -227,7 +227,7 @@
     </section>
     <section class="decor__line">
         <div class="container">
-            <img class="decor__img" src="/images/decor/guitartrue.jpg">
+            <img class="decor__img" src="images/decor/guitartrue.jpg">
         </div>
         </div>
     </section>
@@ -251,7 +251,7 @@
                         </div>
                         <div class="roadmap__item-content2"> WAVE NFTs will be 100% pre-minted and launched as an
                             OpenOcean collection </div>
-                        <div class="roadmap__item-img"> <img src="/images/cards/small/red.jpg"> </div>
+                        <div class="roadmap__item-img"> <img src="images/cards/small/red.jpg"> </div>
                     </div>
                 </div>
                 <div class="roadmap__item2">
@@ -272,7 +272,7 @@
                         <div class="roadmap__item-content22"> Onboarding 100 new artists </div>
                         <div class="roadmap__item-content2"> META Record Labels is holding the first screening of
                             aspiring artists from the list of WAVE NFT holders </div>
-                        <div class="roadmap__item-img2"> <img src="/images/cards/small/blue.jpg"> </div>
+                        <div class="roadmap__item-img2"> <img src="images/cards/small/blue.jpg"> </div>
                     </div>
                 </div>
                 <div class="roadmap__item3">
@@ -292,7 +292,7 @@
                         <div class="roadmap__item-content2"> We secured dates for out artists to peform in front of
                             the live audience of Metaverse. Check the concert schedule in our <a href="#"> Discord
                             </a> </div>
-                        <div class="roadmap__item-img3"> <img src="/images/cards/small/purple.jpg"> </div>
+                        <div class="roadmap__item-img3"> <img src="images/cards/small/purple.jpg"> </div>
                     </div>
                 </div>
             </div>
@@ -320,7 +320,7 @@
         <div class="container">
             <div class="questions__decor">
                 <div class="questions__decor-text"> Frequently <span> asked </span> questions
-                    <div class="questions__decor-img"> <img src="/images/cards/mid/red.jpg"> </div>
+                    <div class="questions__decor-img"> <img src="images/cards/mid/red.jpg"> </div>
                 </div>
             </div>
             <ul class="questions__acc">
@@ -381,14 +381,14 @@
         <div class="container">
             <div class="team__box">
                 <div class="team__box-item">
-                    <div class="team__box-img"> <img src="/images/team/1.jpg"> </div>
+                    <div class="team__box-img"> <img src="images/team/1.jpg"> </div>
                     <div class="team__box-info">
                         <div class="team__box-name"> Shaky Lake </div>
                         <div class="team__box-job"> Founder </div>
                         <div class="team__box-social">
-                            <div class="team__box-socials"> <img src="/images/icon/tw.svg">
+                            <div class="team__box-socials"> <img src="images/icon/tw.svg">
                             </div>
-                            <div class="team__box-socials"> <img src="/images/icon/li.svg">
+                            <div class="team__box-socials"> <img src="images/icon/li.svg">
                             </div>
                         </div>
                         <div class="team__box-about"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
@@ -396,14 +396,14 @@
                     </div>
                 </div>
                 <div class="team__box-item">
-                    <div class="team__box-img"> <img src="/images/team/2.jpg"> </div>
+                    <div class="team__box-img"> <img src="images/team/2.jpg"> </div>
                     <div class="team__box-info">
                         <div class="team__box-name"> Baky Hike </div>
                         <div class="team__box-job"> Co-Founder </div>
                         <div class="team__box-social">
-                            <div class="team__box-socials"> <img src="/images/icon/tw.svg">
+                            <div class="team__box-socials"> <img src="images/icon/tw.svg">
                             </div>
-                            <div class="team__box-socials"> <img src="/images/icon/li.svg">
+                            <div class="team__box-socials"> <img src="images/icon/li.svg">
                             </div>
                         </div>
                         <div class="team__box-about"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
@@ -411,14 +411,14 @@
                     </div>
                 </div>
                 <div class="team__box-item">
-                    <div class="team__box-img"> <img src="/images/team/3.jpg"> </div>
+                    <div class="team__box-img"> <img src="images/team/3.jpg"> </div>
                     <div class="team__box-info">
                         <div class="team__box-name"> Vania Do </div>
                         <div class="team__box-job"> Producer </div>
                         <div class="team__box-social">
-                            <div class="team__box-socials"> <img src="/images/icon/tw.svg">
+                            <div class="team__box-socials"> <img src="images/icon/tw.svg">
                             </div>
-                            <div class="team__box-socials"> <img src="/images/icon/li.svg">
+                            <div class="team__box-socials"> <img src="images/icon/li.svg">
                             </div>
                         </div>
                         <div class="team__box-about"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
@@ -438,10 +438,10 @@
                 <div class="discord__content__text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Suspendisse varius enim in eros elementum tristique. </div>
                 <a href="#" class="discord__content-btn">
-                    <div class="discord__content-img"> <img src="/images/icon/ds.svg"> </div> Join Discord
+                    <div class="discord__content-img"> <img src="images/icon/ds.svg"> </div> Join Discord
                 </a>
 
-                <div class="discord__img"> <img src="/images/cards/big/purple.jpg"> </div>
+                <div class="discord__img"> <img src="images/cards/big/purple.jpg"> </div>
             </div>
         </div>
         </div>
@@ -470,10 +470,10 @@
                     Developed by Anastasiia G.
                 </div>
                 <div class="footer__box-social">
-                    <a href="#" class="footer__box-socials"> <img src="/images/icon/tw.svg"> </a>
-                    <a href="#" class="footer__box-socials"> <img src="/images/icon/ds.svg"> </a>
-                    <a href="#" class="footer__box-socials"> <img src="/images/icon/yt.svg"> </a>
-                    <a href="#" class="footer__box-socials"> <img src="/images/icon/tg.svg"> </a>
+                    <a href="#" class="footer__box-socials"> <img src="images/icon/tw.svg"> </a>
+                    <a href="#" class="footer__box-socials"> <img src="images/icon/ds.svg"> </a>
+                    <a href="#" class="footer__box-socials"> <img src="images/icon/yt.svg"> </a>
+                    <a href="#" class="footer__box-socials"> <img src="images/icon/tg.svg"> </a>
                 </div>
             </div>
         </div>
@@ -482,8 +482,7 @@
     </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="/path/to/mixitup.min.js"></script>
-<script src="/js/mains.js"> </script>
-<script src="/story.js"> </script>
+<script src="js/mains.js"> </script>
+<script src="story.js"> </script>
 
 </html>
