--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <a href="#" class="header__button green__button"> Learn Moore </a>
                     </div>
                     <div class="header__body-img">
-                        <img src="/images/3cards.jpg">
+                        <img src="images/3cards.jpg">
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                         <div class="collection__head-top"> WAVE NFT </div>
                         <div class="collection__head-bot"> COLLECTION of 777 </div>
                         <div class="collection__head-decor">
-                            <img src="/images/cards/mid/blue-card.jpg">
+                            <img src="images/cards/mid/blue-card.jpg">
                         </div>
                     </div>
                     <div class="collection__content">
