--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="artists__box-name"> Daniela Youth </div>
                 </div>
                 <div class="artists__box-item">
-                    <div class="artists__box-img"> <img src="/images/artists/4.jpg"> </div>
+                    <div class="artists__box-img"> <img src="images/artists/4.jpg"> </div>
                     <div class="artists__box-name"> Roman Gore </div>
                 </div>
                 <div class="artists__box-item">
